# NLP-document-summarizer

./: README.md  cli_uses.md  main.py  pyproject.toml
gemini31_iterative/: attantion_key_words_reference.md  attention_key_words_llm.md  attention_key_words_reference.md  attention_key_words_statistical.md  attention_keywords_comparison_report.md  attention_produced_abstract_iterative.md  attention_rouge_metrics.md
gemini31_map_reduce/: attention_cleaned.md  attention_key_words_llm.md  attention_key_words_statistical.md  attention_keywords_comparison_report.md  attention_produced_abstract_map_reduce.md  attention_rouge_metrics.md
grok_iterative/: attention_cleaned.md  attention_key_words_llm.md  attention_key_words_statistical.md  attention_keywords_comparison_report.md  attention_produced_abstract_iterative.md  attention_rouge_metrics.md
grok_map_reduce/: attention_key_words_llm.md  attention_key_words_statistical.md  attention_keywords_comparison_report.md  attention_produced_abstract_map_reduce.md  attention_rouge_metrics.md
src/: __init__.py  evaluate.py  helpers.py  key_words_finder.py  llm_factory.py  parser_PDF.py  text_object_type.py
src/summarizer/: iterative_summarizer.py  map_reduce_summarizer.py  summarizer.py  summarizer_factory.py
test/: download_test_pdf.py  iterative_summarizer_result_1.md  result_v1.md  test_document_key_words_llm.md  test_document_key_words_statistical.md  test_document_keywords_comparison_report.md  test_document_original_abstract.md  test_document_rouge_metrics.md
