[project]
name = "nlp"
version = "0.1.0"
description = "document summarizer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.14.4",
]


[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"
fix = true
show-fixes = true
src = ["src"]


[tool.ruff.lint]
extend-select = ["I", "E", "W", "F", "C90", "B", "S", "UP", "PL"]
